syntax = "proto3";

option csharp_namespace = "GrpcBasket";

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package BasketApi;

service Basket{
	rpc GetBasket(GetBasketRequest) returns (BasketReply) {};
	rpc UpdateBasket(UpdateBasketRequest) returns(BasketReply) {};
	rpc CheckoutBasket(CheckoutBasketRequest) returns (google.protobuf.Empty) {};
}

message GetBasketRequest {
	string buyerId = 1;
}

message UpdateBasketRequest{
	string buyerId = 1;
	repeated BasketItemReply items = 2;
}

message BasketReply {
	string buyerId = 1;
	repeated BasketItemReply items = 2;
}

message BasketItemReply {
	string id = 1;
	int32 catalogItemId = 2;
	string catalogItemName = 3;
	google.protobuf.DoubleValue price = 4;
	google.protobuf.DoubleValue oldPrice = 5;
	int32 quantity = 6;
	string pictureUrl = 7;
}

message CheckoutBasketRequest {
	string requestId = 1;
	string buyerId = 2;
	string city = 3;
	string street = 4;
	string state = 5;
	string country = 6;
	string zipCode = 7;
	string cardNumber = 8;
	string cardHolderName = 9;
	google.protobuf.Timestamp cardExpiration = 10;
	string cardSecurityNumber = 11;
	string cardTypeId = 12;
}